# Adaptive-LLM-Router

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py  client.py  env.py  inference.py  models.py
