[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-llm-router"
version = "1.0.0"
description = "Adaptive AI Model Routing Agent for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "gradio",
    "requests"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
